Fixed broken links

--- a/files/pt-br/learn/html/introduction_to_html/debugging_html/index.html
+++ b/files/pt-br/learn/html/introduction_to_html/debugging_html/index.html
@@ -14,7 +14,7 @@ original_slug: Aprender/HTML/Introducao_ao_HTML/Debugging_HTML
  <tbody>
   <tr>
    <th scope="row">Pré-requisitos:</th>
-   <td>Familiaridade com HTML, conforme abordado, por exemplo, em <a href="/pt-BR/docs/Aprender/HTML/Introducao_ao_HTML/Getting_started">Introdução ao HTML</a>, <a href="/pt-BR/docs/Aprender/HTML/Introducao_ao_HTML/Fundamentos_textuais_HTML">Fundamentos de texto em HTML</a> e <a href="/pt-BR/docs/Aprender/HTML/Introducao_ao_HTML/Criando_hyperlinks">Criação de Hiperlinks</a>.</td>
+   <td>Familiaridade com HTML, conforme abordado, por exemplo, em <a href="/pt-BR/docs/Learn/HTML/Introduction_to_HTML/Getting_started">Introdução ao HTML</a>, <a href="/pt-BR/docs/Learn/HTML/Introduction_to_HTML/HTML_text_fundamentals">Fundamentos de texto em HTML</a> e <a href="/pt-BR/docs/Learn/HTML/Introduction_to_HTML/Creating_hyperlinks">Criação de Hiperlinks</a>.</td>
   </tr>
   <tr>
    <th scope="row">Objetivo:</th>
@@ -83,7 +83,7 @@ original_slug: Aprender/HTML/Introducao_ao_HTML/Debugging_HTML
    <li>O valor do atributo {{htmlattrxref("href","a")}} não tem as aspas de fechamento. Isso parece ter causado o maior problema — o <em>link</em> não foi renderizado.</li>
   </ul>
  </li>
- <li>Agora vamos dar uma olhada no HTML que o navegador renderizou, comparando-o com o nosso código fonte. Para fazer isso, usaremos as ferramentas de desenvolvimento oferecidas pelo navegador. Se você não está familiarizado com estas ferramentas, dê uma olhadinha nesse tutorial: <a href="/pt-BR/docs/Learn/Common_questions/ferramentas_de_desenvolvimento_do_navegador">O que são as ferramentas de desenvolvimento do navegador</a>.</li>
+ <li>Agora vamos dar uma olhada no HTML que o navegador renderizou, comparando-o com o nosso código fonte. Para fazer isso, usaremos as ferramentas de desenvolvimento oferecidas pelo navegador. Se você não está familiarizado com estas ferramentas, dê uma olhadinha nesse tutorial: <a href="/pt-BR/docs/Learn/Common_questions/What_are_browser_developer_tools">O que são as ferramentas de desenvolvimento do navegador</a>.</li>
  <li>No inspetor DOM, você pode ver como o HTML renderizado fica: <img alt="The HTML inspector in Firefox, with our example's paragraph highlighted, showing the text &quot;What causes errors in HTML?&quot; Here you can see that the paragraph element has been closed by the browser." src="https://mdn.mozillademos.org/files/12439/html-inspector.png" style="display: block; margin: 0 auto;"></li>
  <li>Utilizando o inspetor DOM, vamos explorar nosso código detalhadamente para ver como o navegador tentou consertar os erros do código HTML (nós fizemos a análise com o Firefox, mas outros navegadores modernos <em>devem</em> apresentar o mesmo resultado):
   <ul>
@@ -164,13 +164,13 @@ original_slug: Aprender/HTML/Introducao_ao_HTML/Debugging_HTML
 <h2 id="Neste_módulo">Neste módulo</h2>
 
 <ul>
- <li><a href="/pt-BR/docs/Aprender/HTML/Introducao_ao_HTML/Getting_started">Iniciando com HTML</a></li>
- <li><a href="/pt-BR/docs/Aprender/HTML/Introducao_ao_HTML/The_head_metadata_in_HTML">O que está no cabeçalho? Metadados em HTML</a></li>
- <li><a href="/pt-BR/docs/Aprender/HTML/Introducao_ao_HTML/Fundamentos_textuais_HTML">Fundamentos do texto em HTML</a></li>
- <li><a href="/pt-BR/docs/Aprender/HTML/Introducao_ao_HTML/Criando_hyperlinks">Criando hyperlinks</a></li>
- <li><a href="/pt-BR/docs/Aprender/HTML/Introducao_ao_HTML/Formatacao_avancada_texto">Formatação avançada de texto</a></li>
- <li><a href="/pt-BR/docs/Aprender/HTML/Introducao_ao_HTML/Estrutura_de_documento_e_sites">Estrutura de documento e sites</a></li>
- <li><a href="/pt-BR/docs/Aprender/HTML/Introducao_ao_HTML/Debugging_HTML">Debugging HTML</a></li>
+ <li><a href="/pt-BR/docs/Learn/HTML/Introduction_to_HTML/Getting_started">Iniciando com HTML</a></li>
+ <li><a href="/pt-BR/docs/Learn/HTML/Introduction_to_HTML/The_head_metadata_in_HTML">O que está no cabeçalho? Metadados em HTML</a></li>
+ <li><a href="/pt-BR/docs/Learn/HTML/Introduction_to_HTML/HTML_text_fundamentals">Fundamentos do texto em HTML</a></li>
+ <li><a href="/pt-BR/docs/Learn/HTML/Introduction_to_HTML/Creating_hyperlinks">Criando hyperlinks</a></li>
+ <li><a href="/pt-BR/docs/Learn/HTML/Introduction_to_HTML/Advanced_text_formatting">Formatação avançada de texto</a></li>
+ <li><a href="/pt-BR/docs/Learn/HTML/Introduction_to_HTML/Document_and_website_structure">Estrutura de documento e sites</a></li>
+ <li><a href="/pt-BR/docs/Learn/HTML/Introduction_to_HTML/Debugging_HTML">Debugando HTML</a></li>
  <li><a href="/en-US/docs/Learn/HTML/Introduction_to_HTML/Marking_up_a_letter">Marking up a letter</a></li>
- <li><a href="/en-US/docs/Learn/HTML/Introduction_to_HTML/Structuring_a_page_of_content">Structuring a page of content</a></li>
+ <li><a href="/en-US/docs/Learn/HTML/Introduction_to_HTML/Structuring_a_page_of_content">Estruturando uma página de conteúdo</a></li>
 </ul>
