--- a/files/pt-br/learn/html/introduction_to_html/debugging_html/index.html
+++ b/files/pt-br/learn/html/introduction_to_html/debugging_html/index.html
@@ -25,15 +25,15 @@ original_slug: Aprender/HTML/Introducao_ao_HTML/Debugging_HTML
 
 <h2 id="Depurar_não_é_assustador">Depurar não é assustador</h2>
 
-<p>Ao escrever algum tipo de código, tudo costuma ir bem, até o temido momento quando ocorre um erro — você fez algo errado, então seu código não funciona - talvez não funcione mais nada ou não funciona exatamente como você queria. Por exemplo, a seguir é mostrado um erro relatado ao tentar {{glossary("compilar")}} um programa simples escrito na linguagem <a href="https://www.rust-lang.org/">Rust</a>.</p>
+<p>Ao escrever algum tipo de código, tudo costuma ir bem, até o temido momento quando ocorre um erro — você fez algo errado, então seu código não funciona - talvez não funcione mais nada ou não funciona exatamente como você queria. Por exemplo, a seguir é mostrado um erro relatado ao tentar {{glossary("Compile")}} um programa simples escrito na linguagem <a href="https://www.rust-lang.org/">Rust</a>.</p>
 
-<p><img alt="A console window showing the result of trying to compile a rust program with a missing quote around a string in a print statement. The error message reported is error: unterminated double quote string." src="https://mdn.mozillademos.org/files/12435/error-message.png" style="display: block; height: 520px; margin: 0px auto; width: 711px;">Aqui, a mensagem de erro é relativamente fácil de entender — "string de aspas duplas sem terminação". Se você olhar a listagem, provavelmente verá como <code>println!(Hello, world!");</code> pode estar faltando logicamente uma aspa dupla. No entanto, as mensagens de erro podem ficar mais complicadas e menos fáceis de interpretar à medida que os programas se tornam maiores, e até mesmo casos simples podem parecer um pouco intimidadores para alguém que não sabe nada sobre o Rust.</p>
+<p><img alt="A console window showing the result of trying to compile a rust program with a missing quote around a string in a print statement. The error message reported is error: unterminated double quote string." src="/en-US/docs/Learn/HTML/Introduction_to_HTML/Debugging_HTML/error-message.png" style="display: block; height: 520px; margin: 0px auto; width: 711px;">Aqui, a mensagem de erro é relativamente fácil de entender — "string de aspas duplas sem terminação". Se você olhar a listagem, provavelmente verá como <code>println!(Hello, world!");</code> pode estar faltando logicamente uma aspa dupla. No entanto, as mensagens de erro podem ficar mais complicadas e menos fáceis de interpretar à medida que os programas se tornam maiores, e até mesmo casos simples podem parecer um pouco intimidadores para alguém que não sabe nada sobre o Rust.</p>
 
 <p>Depurar um código não tem que ser assustador, porém —  a chave para se sentir confortável em escrever e depurar qualquer linguagem ou código de programação é a familiaridade com a linguagem e as ferramentas.</p>
 
 <h2 id="HTML_e_depuração">HTML e depuração</h2>
 
-<p>HTML não é tão complicado de entender quanto o Rust. O HTML <strong>não é compilado</strong> em um formato diferente antes do navegador analisá-lo e mostrar o resultado (ele é interpretado, não compilado). E a sintaxe do {{glossary("elemento")}} HTML é muito mais fácil de entender do que uma "linguagem de programação real" como Rust, {{glossary("JavaScript")}}, ou {{glossary("Python")}}. A forma como os navegadores analisam o HTML é muito mais <strong>permissiva </strong>do que a forma como as linguagens de programação são executadas, o que é bom e ruim.</p>
+<p>HTML não é tão complicado de entender quanto o Rust. O HTML <strong>não é compilado</strong> em um formato diferente antes do navegador analisá-lo e mostrar o resultado (ele é interpretado, não compilado). E a sintaxe do {{glossary("Element")}} HTML é muito mais fácil de entender do que uma "linguagem de programação real" como Rust, {{glossary("JavaScript")}}, ou {{glossary("Python")}}. A forma como os navegadores analisam o HTML é muito mais <strong>permissiva </strong>do que a forma como as linguagens de programação são executadas, o que é bom e ruim.</p>
 
 <h3 id="Código_permissivo">Código permissivo</h3>
 
@@ -56,7 +56,7 @@ original_slug: Aprender/HTML/Introducao_ao_HTML/Debugging_HTML
 
 <ol>
  <li>Primeiramente, faça o download do <a href="https://github.com/mdn/learning-area/blob/master/html/introduction-to-html/debugging-html/debug-example.html">debug-example demo</a> e o salve localmente. Esse exemplo contém erros propositais para que possamos explorá-los (tal código HTML é dito  <em><strong>badly-formed</strong></em>, em contraponto ao HTML <em><strong>well-formed</strong></em>).</li>
- <li>Em seguida, abra o arquivo em um navegador. Você verá algo como:<img alt="A simple HTML document with a title of HTML debugging examples, and some information about common HTML errors, such as unclosed elements, badly nested elements, and unclosed attributes. " src="https://mdn.mozillademos.org/files/12437/badly-formed-html.png" style="display: block; margin: 0 auto;"></li>
+ <li>Em seguida, abra o arquivo em um navegador. Você verá algo como:<img alt="A simple HTML document with a title of HTML debugging examples, and some information about common HTML errors, such as unclosed elements, badly nested elements, and unclosed attributes. " src="/en-US/docs/Learn/HTML/Introduction_to_HTML/Debugging_HTML/badly-formed-html.png" style="display: block; margin: 0 auto;"></li>
  <li>Isso claramente não parece bom; vamos dar uma olhada no código fonte para tentar achar os erros (somente o conteúdo de <em>body</em> é mostrado):
   <pre class="brush: html notranslate">&lt;h1&gt;HTML debugging examples&lt;/h1&gt;
 
@@ -84,7 +84,7 @@ original_slug: Aprender/HTML/Introducao_ao_HTML/Debugging_HTML
   </ul>
  </li>
  <li>Agora vamos dar uma olhada no HTML que o navegador renderizou, comparando-o com o nosso código fonte. Para fazer isso, usaremos as ferramentas de desenvolvimento oferecidas pelo navegador. Se você não está familiarizado com estas ferramentas, dê uma olhadinha nesse tutorial: <a href="/pt-BR/docs/Learn/Common_questions/What_are_browser_developer_tools">O que são as ferramentas de desenvolvimento do navegador</a>.</li>
- <li>No inspetor DOM, você pode ver como o HTML renderizado fica: <img alt="The HTML inspector in Firefox, with our example's paragraph highlighted, showing the text &quot;What causes errors in HTML?&quot; Here you can see that the paragraph element has been closed by the browser." src="https://mdn.mozillademos.org/files/12439/html-inspector.png" style="display: block; margin: 0 auto;"></li>
+ <li>No inspetor DOM, você pode ver como o HTML renderizado fica: <img alt="The HTML inspector in Firefox, with our example's paragraph highlighted, showing the text &quot;What causes errors in HTML?&quot; Here you can see that the paragraph element has been closed by the browser." src="/en-US/docs/Learn/HTML/Introduction_to_HTML/Debugging_HTML/html-inspector.png" style="display: block; margin: 0 auto;"></li>
  <li>Utilizando o inspetor DOM, vamos explorar nosso código detalhadamente para ver como o navegador tentou consertar os erros do código HTML (nós fizemos a análise com o Firefox, mas outros navegadores modernos <em>devem</em> apresentar o mesmo resultado):
   <ul>
    <li>As <em>tags</em> de fechamento foram colocadas nos parágrafos e itens da lista.</li>
@@ -111,7 +111,7 @@ original_slug: Aprender/HTML/Introducao_ao_HTML/Debugging_HTML
 
 <p>A melhor estratégia é começar rodando a sua página HTML através do <a href="https://validator.w3.org/">Markup Validation Service</a> — criado e mantido pelo W3C, uma organização que cuida das especificações que define o HTML, CSS, e outras tecnologias WEB. Esta página considera um documento HTML como uma entrada, fazendo a leitura dela e retornando o que há de errado com o seu HTML.</p>
 
-<p><img alt="The HTML validator homepage" src="https://mdn.mozillademos.org/files/12441/validator.png" style="display: block; margin: 0 auto;"></p>
+<p><img alt="The HTML validator homepage" src="/en-US/docs/Learn/HTML/Introduction_to_HTML/Debugging_HTML/validator.png" style="display: block; margin: 0 auto;"></p>
 
 <p>Para especificar o HTML a ser validado, você pode dar um endereço web, fazer o upload de um arquivo HTML, ou diretamente inserir o código HTML.</p>
 
@@ -128,7 +128,7 @@ original_slug: Aprender/HTML/Introducao_ao_HTML/Debugging_HTML
 
 <p>Você deverá receber uma lista de erros e outras informações.</p>
 
-<p><img alt="A list of of HTML validation results from the W3C markup validation service" src="https://mdn.mozillademos.org/files/12443/validation-results.png" style="display: block; margin: 0 auto;"></p>
+<p><img alt="A list of of HTML validation results from the W3C markup validation service" src="/en-US/docs/Learn/HTML/Introduction_to_HTML/Debugging_HTML/validation-results.png" style="display: block; margin: 0 auto;"></p>
 
 <h4 id="Interpretando_as_mensagens_de_erros">Interpretando as mensagens de erros</h4>
 
@@ -153,7 +153,7 @@ original_slug: Aprender/HTML/Introducao_ao_HTML/Debugging_HTML
 
 <p><span>Você vai saber quando todos os seus erros forem resolvidos quando ver a seguinte bandeira no output: </span></p>
 
-<p><img alt='Banner that reads "The document validates according to the specified schema(s) and to additional constraints checked by the validator."' src="https://mdn.mozillademos.org/files/12445/valid-html-banner.png" style="display: block; margin: 0 auto;"></p>
+<p><img alt='Banner that reads "The document validates according to the specified schema(s) and to additional constraints checked by the validator."' src="/en-US/docs/Learn/HTML/Introduction_to_HTML/Debugging_HTML/valid-html-banner.png" style="display: block; margin: 0 auto;"></p>
 
 <h2 id="Summary">Sumário</h2>
 
