--- a/files/es/web/html/element/body/index.html
+++ b/files/es/web/html/element/body/index.html
@@ -18,12 +18,12 @@ original_slug: Web/HTML/Elemento/body
 <table class="properties">
  <tbody>
   <tr>
-   <th scope="row">{{web.link("/es/docs/Web/HTML/Content_categories", "Categorías de contenido")}}</th>
-   <td>{{web.link("/en-US/docs/Web/Guide/HTML/Using_HTML_sections_and_outlines#Section_Elements_in_HTML5", "Secciones en HTML5")}}</td>
+   <th scope="row"><a href="/es/docs/Web/HTML/Content_categories">Categorías de contenido</a></th>
+   <td><a href="/en-US/docs/Web/Guide/HTML/Using_HTML_sections_and_outlines#Section_Elements_in_HTML5">Secciones en HTML5</a></td>
   </tr>
   <tr>
    <th scope="row">Contenido permitido</th>
-   <td>{{web.link("/es/docs/Web/HTML/Content_categories#Flow_content", "Flujo de contenido")}}.</td>
+   <td><a href="/es/docs/Web/HTML/Content_categories#Flow_content">Flujo de contenido</a>.</td>
   </tr>
   <tr>
    <th scope="row">Omisión de etiqueta</th>
@@ -35,7 +35,7 @@ original_slug: Web/HTML/Elemento/body
   </tr>
   <tr>
    <th scope="row">Rol de ARIA implícito</th>
-   <td>{{web.link("/es/docs/Web/Accessibility/ARIA/Roles/Document_Role", "document")}}</td>
+   <td><a href="/es/docs/Web/Accessibility/ARIA/Roles/Document_Role">document</a></td>
   </tr>
   <tr>
    <th scope="row">Roles ARIA permitidos</th>
@@ -55,7 +55,7 @@ original_slug: Web/HTML/Elemento/body
 
 <h2 id="Atributos">Atributos</h2>
 
-<p>Este elemento incluye los {{web.link("/es/docs/Web/HTML/Global_attributes", "atributos globales")}}.</p>
+<p>Este elemento incluye los <a href="/es/docs/Web/HTML/Global_attributes">atributos globales</a>.</p>
 
 <dl>
  <dt>{{HTMLAttrDef("alink")}} {{obsolete_inline}}</dt>
