--- a/files/es/web/html/element/q/index.html
+++ b/files/es/web/html/element/q/index.html
@@ -26,12 +26,12 @@ original_slug: Web/HTML/Elemento/q
 <table class="properties">
  <tbody>
   <tr>
-   <th scope="row">{{web.link("/es/docs/Web/HTML/Content_categories", "Categorías de contenido")}}</th>
-   <td>{{web.link("/es/docs/Web/HTML/Content_categories#Flow_content", "Flujo de contenido")}}, {{web.link("/es/docs/Web/HTML/Content_categories#Phrasing_content", "redacción de contenido")}}, contenido palpable.</td>
+   <th scope="row"><a href="/es/docs/Web/HTML/Content_categories">Categorías de contenido</a>{{</th>
+   <td><a href="/es/docs/Web/HTML/Content_categories#Flow_content">Flujo de contenido</a>, <a href="/es/docs/Web/HTML/Content_categories#Phrasing_content">redacción de contenido</a>, contenido palpable.</td>
   </tr>
   <tr>
    <th scope="row">Contenido permitido</th>
-   <td>{{web.link("/es/docs/Web/HTML/Content_categories#Phrasing_content", "Redacción de contenido")}}.</td>
+   <td><a href="/es/docs/Web/HTML/Content_categories#Phrasing_content">Redacción de contenido</a>.</td>
   </tr>
   <tr>
    <th scope="row">Omisión de etiqueta</th>
@@ -39,11 +39,11 @@ original_slug: Web/HTML/Elemento/q
   </tr>
   <tr>
    <th scope="row">Padres autorizados</th>
-   <td>Cualquier elemento que acepte {{web.link("/es/docs/Web/HTML/Content_categories#Phrasing_content", "redacción de contenido")}}.</td>
+   <td>Cualquier elemento que acepte <a href="/es/docs/Web/HTML/Content_categories#Phrasing_content">redacción de contenido</a>.</td>
   </tr>
   <tr>
    <th scope="row">Rol de ARIA implícito</th>
-   <td>{{web.link("https://www.w3.org/TR/html-aria/#dfn-no-corresponding-role", "Rol no correspondiente")}}</td>
+   <td><a href="https://www.w3.org/TR/html-aria/#dfn-no-corresponding-role">Rol no correspondiente</a></td>
   </tr>
   <tr>
    <th scope="row">Roles ARIA permitidos</th>
@@ -62,7 +62,7 @@ original_slug: Web/HTML/Elemento/q
 
 <h2 id="Atributos">Atributos</h2>
 
-<p>Este elemento incluye los {{web.link("/es/docs/Web/HTML/Global_attributes", "atributos globales")}}.</p>
+<p>Este elemento incluye los <a href="/es/docs/Web/HTML/Global_attributes">atributos globales</a>.</p>
 
 <dl>
  <dt>{{HTMLAttrDef("cite")}}</dt>
