chore: remove web.link macro - ru
Remove the web.link macro from RU docs.

fix #9079

--- a/files/ru/web/javascript/guide/expressions_and_operators/index.html
+++ b/files/ru/web/javascript/guide/expressions_and_operators/index.html
@@ -23,17 +23,17 @@ translation_of: Web/JavaScript/Guide/Expressions_and_Operators
 <p>В JavaScript есть следующие типы операторов. Данный подраздел описывает каждый тип и содержит информацию об их приоритетах друг над другом.</p>
 
 <ul>
- <li>{{ web.link("#Операторы_присваивания", "Операторы присваивания") }}</li>
- <li>{{ web.link("#Операторы_сравнения", "Операторы сравнения") }}</li>
- <li>{{ web.link("#Арифметические_операторы", "Арифметические операторы") }}</li>
- <li>{{ web.link("#Битовые_(поразрядные)_операторы", "Битовые (поразрядные) операторы") }}</li>
- <li>{{ web.link("#Логические_операторы", "Логические операторы") }}</li>
- <li>{{ web.link("#Строковые_операторы", "Строковые операторы") }}</li>
- <li>{{ web.link("#Условный_(тернарный)_оператор", "Условный (тернарный) оператор")}}</li>
- <li>{{ web.link("#Оператор_запятая", "Оператор запятая")}}</li>
- <li>{{ web.link("#Унарные_операторы", "Унарные операторы")}}</li>
- <li>{{ web.link("#Операторы_отношения", "Операторы отношения")}}</li>
- <li>{{ web.link("#Приоритет_операторов", "Приоритет операторов")}}</li>
+ <li><a href="#Операторы_присваивания">Операторы присваивания</a></li>
+ <li><a href="#Операторы_сравнения">Операторы сравнения</a></li>
+ <li><a href="#Арифметические_операторы">Арифметические операторы</a></li>
+ <li><a href="#Битовые_(поразрядные)_операторы">Битовые (поразрядные) операторы</a></li>
+ <li><a href="#Логические_операторы">Логические операторы</a></li>
+ <li><a href="#Строковые_операторы">Строковые операторы</a></li>
+ <li><a href="#Условный_(тернарный)_оператор">Условный (тернарный) оператор</a></li>
+ <li><a href="#Оператор_запятая">Оператор запятая</a></li>
+ <li><a href="#Унарные_операторы">Унарные операторы</a></li>
+ <li><a href="#Операторы_отношения">Операторы отношения</a></li>
+ <li><a href="#Приоритет_операторов">Приоритет операторов</a></li>
 </ul>
 
 <p>JavaScript поддерживает бинарные и унарные операторы, а также ещё один специальный тернарный оператор - условный оператор. Бинарная операция использует два операнда, один перед оператором и другой за ним:</p>
@@ -821,9 +821,9 @@ if (theDay instanceof Date) {
 <p>Все выражения в JavaScript делятся на следующие категории:</p>
 
 <ul>
- <li><strong>Арифметические</strong>: вычисляются в число, например: 3.14159 (Используют {{ web.link("#Arithmetic_operators", "арифметические операторы") }}).</li>
- <li><strong>Строковые</strong>: вычисляются в текстовую строку, например: "Fred" или "234" (Используют {{ web.link("#String_operators", "строковые операторы") }}).</li>
- <li><strong>Логические</strong>: вычисляются в true или false (Используют {{ web.link("#Logical_operators", "логические операторы") }}).</li>
+ <li><strong>Арифметические</strong>: вычисляются в число, например: 3.14159 (Используют <a href="#Arithmetic_operators">арифметические операторы</a>).</li>
+ <li><strong>Строковые</strong>: вычисляются в текстовую строку, например: "Fred" или "234" (Используют <a href="#String_operators">строковые операторы</a>).</li>
+ <li><strong>Логические</strong>: вычисляются в true или false (Используют <a href="#Logical_operators">логические операторы</a>).</li>
  <li><strong>Основные выражения</strong>: Базовые ключевые слова и основные выражения в JavaScript.</li>
  <li><strong>Левосторонние выражения</strong>: Значениям слева назначаются значения справа.</li>
 </ul>
