--- a/files/ru/web/javascript/guide/working_with_objects/index.html
+++ b/files/ru/web/javascript/guide/working_with_objects/index.html
@@ -152,7 +152,7 @@ myCar.year = 1969</pre>
 };
 </pre>
 
-<p>Вы также можете использовать инициализатор объекта для создания массивов. Смотрите {{ web.link("Values%2C_variables%2C_and_literals#Array_literals", "array literals") }}.</p>
+<p>Вы также можете использовать инициализатор объекта для создания массивов. Смотрите <a href="Values%2C_variables%2C_and_literals#Array_literals">array literals</a>.</p>
 
 <p>До JavaScript 1.1 не было возможности пользоваться инициализаторами объекта. Единственный способ создавать объекты — это пользоваться функциями-конструкторами или функциями других объектов, предназначенных для этой цели. Смотрите <a href="#using_a_constructor_function">Using a constructor function</a>.</p>
 
@@ -409,11 +409,11 @@ console.log(now);
 <p>В принципе, геттеры и сеттеры могут быть либо:</p>
 
 <ul>
- <li>определены при использовании {{ web.link("#Использование_инициализаторов_объекта", "Инициализаторов объекта") }}, или</li>
+ <li>определены при использовании <a href="#Использование_инициализаторов_объекта">Инициализаторов объекта</a>, или</li>
  <li>добавлены существующему объекту в любой момент, при использовании методов добавления геттеров и сеттеров.</li>
 </ul>
 
-<p>Когда определение геттера и сеттера использует {{ web.link("#Использование_инициализаторов_объекта", "инициализаторы объекта") }}, всё что вам нужно, это дополнить геттер префиксом <code>get</code> а сеттер префиксом <code>set</code>. При этом, метод геттера не должен ожидать каких либо параметров, в то время как метод сеттера принимает один единственный параметр (новое значение для присвоения свойству). Например:</p>
+<p>Когда определение геттера и сеттера использует <a href="#Использование_инициализаторов_объекта">инициализаторы объекта</a>, всё что вам нужно, это дополнить геттер префиксом <code>get</code> а сеттер префиксом <code>set</code>. При этом, метод геттера не должен ожидать каких либо параметров, в то время как метод сеттера принимает один единственный параметр (новое значение для присвоения свойству). Например:</p>
 
 <pre class="brush: js">var o = {
   a: 7,
@@ -454,7 +454,7 @@ delete myobj.a;
 delete g;
 </pre>
 
-<p>Смотри <code>{{ web.link("Expressions_and_operators#delete", "delete") }}</code> чтобы получить дополнительную информацию.</p>
+<p>Смотри <a href="Expressions_and_operators#delete"><code>delete</code></a> чтобы получить дополнительную информацию.</p>
 
 <h2 id="Сравнение_объектов">Сравнение объектов</h2>
 
