--- a/files/ru/web/javascript/guide/regular_expressions/index.html
+++ b/files/ru/web/javascript/guide/regular_expressions/index.html
@@ -32,7 +32,7 @@ translation_of: Web/JavaScript/Guide/Regular_Expressions
 
 <h2 id="Написание_шаблона_регулярного_выражения">Написание шаблона регулярного выражения</h2>
 
-<p>Шаблон регулярного выражения состоит из обычных символов, например <code>/abc/</code>, или комбинаций обычных и специальных символов, например <code>/ab*c/</code> или <code>/Chapter (\d+)\.\d*/</code>. Последний пример включает в себя скобки, которые используются как "запоминающий механизм". Соответствие этой части шаблона запоминается для дальнейшего использования, как описано в {{ web.link("#Использование_скобочных_выражений_для_нахождения_подстрок", "Использование совпадений подстрок заключённых в скобки") }}.</p>
+<p>Шаблон регулярного выражения состоит из обычных символов, например <code>/abc/</code>, или комбинаций обычных и специальных символов, например <code>/ab*c/</code> или <code>/Chapter (\d+)\.\d*/</code>. Последний пример включает в себя скобки, которые используются как "запоминающий механизм". Соответствие этой части шаблона запоминается для дальнейшего использования, как описано в <a href="#Использование_скобочных_выражений_для_нахождения_подстрок">Использование совпадений подстрок заключённых в скобки</a>.</p>
 
 <h3 id="Использование_простых_шаблонов">Использование простых шаблонов</h3>
 
@@ -327,7 +327,7 @@ translation_of: Web/JavaScript/Guide/Regular_Expressions
 
 <h3 id="Использование_скобок">Использование скобок</h3>
 
-<p>Скобки вокруг любой части регулярного выражения означают что эта часть совпадаемой подстроки будет запомнена. Раз запомнена, подстрока может выбрана для использования как это описано в {{ web.link("#Using_Parenthesized_Substring_Matches", "Using Parenthesized Substring Matches") }}.</p>
+<p>Скобки вокруг любой части регулярного выражения означают что эта часть совпадаемой подстроки будет запомнена. Раз запомнена, подстрока может выбрана для использования как это описано в <a href="#Using_Parenthesized_Substring_Matches">Using Parenthesized Substring Matches</a>.</p>
 
 <p>Например, паттерн <code>/Chapter (\d+)\.\d*/</code> включает в себя дополнительные экранирующие и специальные символы и указывает на то, что часть шаблона должна быть запомнена. Он точно соответствует символам слова 'Chapter ', за которыми следует один или более цифровых символов (<code>\d</code> означает любой цифровой символ, а '<code>+'</code> означает 1 или более раз), за которым следует десятичная точка (сама по себе являющаяся специальным символом; предшествующий десятичной точке слеш ' \' означает, что паттерн должен искать литеральный символ '.'), после которой следует любой цифровой символ 0 или более раз ('<code>\d'</code> обозначает цифровой символ, '<code>*'</code> обозначает 0 или более раз). Кроме того, круглые скобки используются для запоминания первых же совпавших цифровых символов. </p>
 
@@ -431,7 +431,7 @@ var myArray = myRe.exec("cdbbdbsbz");
   <tr>
    <td rowspan="2"><code>myRe</code></td>
    <td><code>lastIndex</code></td>
-   <td>Индекс с которого начнётся след. поиск совпадения. (Это свойство определяется только если регулярное выражение использует параметр g, описанный в {{ web.link("#Advanced_Searching_With_Flags", "Advanced Searching With Flags") }}.)</td>
+   <td>Индекс с которого начнётся след. поиск совпадения. (Это свойство определяется только если регулярное выражение использует параметр g, описанный в <a href="#Advanced_Searching_With_Flags">Advanced Searching With Flags</a>.)</td>
    <td><code>5</code></td>
   </tr>
   <tr>
