--- a/files/es/web/html/element/q/index.html
+++ b/files/es/web/html/element/q/index.html
@@ -26,7 +26,7 @@ original_slug: Web/HTML/Elemento/q
 <table class="properties">
  <tbody>
   <tr>
-   <th scope="row"><a href="/es/docs/Web/HTML/Content_categories">Categorías de contenido</a>{{</th>
+   <th scope="row"><a href="/es/docs/Web/HTML/Content_categories">Categorías de contenido</a></th>
    <td><a href="/es/docs/Web/HTML/Content_categories#Flow_content">Flujo de contenido</a>, <a href="/es/docs/Web/HTML/Content_categories#Phrasing_content">redacción de contenido</a>, contenido palpable.</td>
   </tr>
   <tr>
