fix: Remove Google Translate Links RU

--- a/files/ru/games/tutorials/2d_breakout_game_pure_javascript/collision_detection/index.html
+++ b/files/ru/games/tutorials/2d_breakout_game_pure_javascript/collision_detection/index.html
@@ -124,6 +124,6 @@ for(var c=0; c&lt;brickColumnCount; c++) {
 
 <h2 id="Следующие_шаги">Следующие шаги</h2>
 
-<p>Мы уверенно движемся вперёд! Поехали! В восьмой главе мы будем учиться <a href="https://translate.googleusercontent.com/translate_c?act=url&amp;depth=1&amp;hl=ru&amp;ie=UTF8&amp;prev=_t&amp;rurl=translate.google.com&amp;sl=en&amp;sp=nmt4&amp;tl=ru&amp;u=https://developer.mozilla.org/en-US/docs/Games/Workflows/Breakout_game_from_scratch/Track_the_score_and_win&amp;xid=25657,15700022,15700124,15700149,15700168,15700186,15700190,15700201,15700205&amp;usg=ALkJrhhN9U9TuRM07dQaU3Oyqz2-F5ctig">отслеживать счёт и выигрывать</a> .</p>
+<p>Мы уверенно движемся вперёд! Поехали! В восьмой главе мы будем учиться <a href="/en-US/docs/Games/Workflows/Breakout_game_from_scratch/Track_the_score_and_win">отслеживать счёт и выигрывать</a> .</p>
 
 <p>{{PreviousNext("Games/Workflows/2D_Breakout_game_pure_JavaScript/Build_the_brick_field", "Games/Workflows/2D_Breakout_game_pure_JavaScript/Track_the_score_and_win")}}</p>
