--- a/files/ru/web/mathml/element/math/index.html
+++ b/files/ru/web/mathml/element/math/index.html
@@ -128,7 +128,7 @@ translation_of: Web/MathML/Element/math
 
 <h3 id="Особенности_ядра_Gecko">Особенности ядра Gecko</h3>
 
-<p>В Gecko 7.0 (Firefox 7.0 / Thunderbird 7.0 / SeaMonkey 2.4) появилась поддержка всех MathML атрибутов для элементов верхнего уровня (т.е. такое же поведение как <a href="https://developer.mozilla.org/en-US/docs/Web/MathML/Element/mstyle" title="&lt;Mstyle>"><code>&lt;mstyle&gt;</code></a> элемента).  Тем не менее, <code>displaystyle</code> атрибут не отрабатывается. Его поддержка <a class="external link-https external-icon" href="https://translate.googleusercontent.com/translate_c?depth=1&amp;hl=ru&amp;ie=UTF8&amp;prev=_t&amp;rurl=translate.google.com&amp;sl=en&amp;tl=ru&amp;u=https://bugzilla.mozilla.org/show_bug.cgi%3Fid%3D669719&amp;usg=ALkJrhgLJ8bHaC2M0rCMSujebFa8KEb7lQ">была добавлена</a> ​​в Gecko 8.0 (Firefox 8.0 / Thunderbird 8.0 / SeaMonkey 2.5).</p>
+<p>В Gecko 7.0 (Firefox 7.0 / Thunderbird 7.0 / SeaMonkey 2.4) появилась поддержка всех MathML атрибутов для элементов верхнего уровня (т.е. такое же поведение как <a href="https://developer.mozilla.org/en-US/docs/Web/MathML/Element/mstyle" title="&lt;Mstyle>"><code>&lt;mstyle&gt;</code></a> элемента).  Тем не менее, <code>displaystyle</code> атрибут не отрабатывается. Его поддержка <a class="external link-https external-icon" href="https://bugzilla.mozilla.org/show_bug.cgi%3Fid%3D669719">была добавлена</a> ​​в Gecko 8.0 (Firefox 8.0 / Thunderbird 8.0 / SeaMonkey 2.5).</p>
 
 <p>Альтернативные текстовые описания (<code>alttext</code>) или ссылки на альтернативное изображение, (атрибуты <code>altimg</code> , <code>altimg-width</code> , <code>altimg-height</code> и <code>altimg-valign</code>) в настоящее время не реализованы в Gecko.</p>
 
