--- a/files/ru/learn/tools_and_testing/github/index.html
+++ b/files/ru/learn/tools_and_testing/github/index.html
@@ -49,21 +49,21 @@ original_slug: Learn/Tools_and_testing/GitHub
 <p><strong>Важно</strong>: Github не единственный сайт / инструментарий который ты можешь использовать с Git. Есть и альтернативы, такие как <a href="https://about.gitlab.com/">GitLab</a>, которые ты можешь попробовать, а также ты можешь попробовать настроить свой собственный сервер Git и использовать вместо GitHub. Мы в этом курсе остановились на GitHub, чтобы показать один из рабочих способов.</p>
 </div>
 
-<h2 id="Guides">Guides</h2>
+<h2 id="Руководства">Руководства</h2>
 
-<p>Note that the links below take you to resources on external sites. Eventually we will are aiming to have our own dedicated Git/GitHub course, but for now, these will help you get to grips with the subject in hand.</p>
+<p>Все указанные ниже ссылки ведут на внешние ресурсы. Со временем у нас появится свой собственный курс по Git/GitHub. А сейчас они помогут вам подробнее разобраться в материале.</p>
 
 <dl>
  <dt><a href="https://guides.github.com/activities/hello-world/">Hello World (from GitHub)</a></dt>
- <dd>This is a good place to start — this practical guide gets you to jump right into using GitHub, learning the basics of Git such as creating repositories and branches, making commits, and opening and merging pull requests.</dd>
+ <dd>Это прктическое руководство отлично подходит для ничинающих использовать GitHub. Оно содержит основы использования Git, такие как: создание репозиториев, веток, создание коммитов, открытия и слияния пулл-реквестов.</dd>
  <dt><a href="https://guides.github.com/introduction/git-handbook/">Git Handbook (from GitHub)</a></dt>
- <dd>This Git Handbook goes into a little more depth, explaining what a VCS is, what a repository is, how the basic GitHub model works, Git commands and examples, and more.</dd>
+ <dd>Этот справочник по Git позволяет понять, что такоесистема контроля версий (VCS), что такое репозиторий,как устроен GitHub, описывает основные команды Git, демонстрирует примеры использования Git.</dd>
  <dt><a href="https://guides.github.com/activities/forking/">Forking Projects (from GitHub)</a></dt>
- <dd>Forking projects is essential when you want to contribute to someone else's code. This guide explains how.</dd>
+ <dd>Это руководство позволяет работать с изменениями в чужих проектах.</dd>
  <dt><a href="https://help.github.com/en/articles/about-pull-requests">About Pull Requests (from GitHub)</a></dt>
- <dd>A useful guide to managing pull requests, the way that your suggested code changes are delivered to people's repositories for consideration.</dd>
+ <dd>Руководство по управления пулл-реквестами. Описывает правила оформления изменений в коде и отправку их в общие репозитории.</dd>
  <dt><a href="https://guides.github.com/features/issues/">Mastering issues (from GitHub)</a></dt>
- <dd>Issues are like a forum for your GitHub project, where people can ask questions and report problems, and you can manage updates (for example assigning people to fix issues, clarifying the issue, letting people know things are fixed). This articles gives you what you need to know about issues.</dd>
+ <dd>Блок вопросов - это форум вашего проекта, здесь люди могут задавать вопросы, публиковать возникшие проблемы. В созданных темах вы можете публиковать обновление, например: назначать людей на исправление возникших ошибок, отвечать на вопросы пользователей, сообщать людям об исправлении ошибок. В этих статьях описано, как правильно управлять форумом проекта.</dd>
 </dl>
 
 <div class="blockIndicator note">
